ambassador/ambassador-service.yaml
---
apiVersion: v1
kind: Service
metadata:
#  namespace: kube-system
  labels: 
    service: ambassador
    kubernetes.io/cluster-service: "true"
  name: ambassador
spec:
  type: NodePort  #NodePort  LoadBalancer
  ports:
   - port: 80
     nodePort: 32001
  selector:
    service: ambassador
#  externalIPs:
#   - 192.168.20.101
