ambassador/ambassador-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ambassador-ingress
spec:
  rules:
  - host: us.unitone.cn:32001
    http:
      paths:
      - backend:
          serviceName: ambassador
          servicePort: 80
